# detectron2-neo-core

./: .dockerignore  .gitignore  Dockerfile  README.md  build.py  build.sh  pyproject.toml  setup.py
.github/workflows/: workflow.yml
src/detectron2/data/: __init__.py
