[tool.poetry]
name = "detectron2"
version = "0.7.0"
description = "Modernised fork of Detectron2"
homepage = "https://github.com/wilsonzlin/detectron2"
authors = ["FAIR", "Wilson Lin <code@wilsonl.in>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.8"
pillow = ">=7.1"
matplotlib = "^3.7.1"
pycocotools = ">=2.0.2"
termcolor = ">=1.1"
yacs = ">=0.1.8"
tabulate = "^0.9.0"
cloudpickle = "^2.2.1"
tqdm = ">4.29.0"
tensorboard = "^2.12.1"
fvcore = ">=0.1.5,<0.1.6"
iopath = ">=0.1.7,<0.1.10"
omegaconf = ">=2.1"
hydra-core = ">=1.1"
black = "^23.3.0"
packaging = "^23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
