[tool.poetry]
name = "detectron2"
version = "0.7.0"
description = "Modernised fork of Detectron2"
homepage = "https://github.com/wilsonzlin/detectron2"
authors = ["FAIR", "Wilson Lin <code@wilsonl.in>"]
license = "Apache-2.0"
readme = "README.md"
build = "build.py"

[tool.poetry.dependencies]
cloudpickle = "^2.2.1"
fvcore = ">=0.1.5,<0.1.6"
iopath = ">=0.1.7,<0.1.10"
matplotlib = "^3.7.1"
omegaconf = ">=2.1"
packaging = "^23.0"
pillow = ">=7.1"
pycocotools = ">=2.0.2"
python = "^3.8"
tabulate = "^0.9.0"
tensorboard = "^2.12.1"
termcolor = ">=1.1"
torch = ">=1.8"
tqdm = ">4.29.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
torch = ">=1.8" # TODO This currently does nothing, as Poetry doesn't install it before running build.py.

# TODO This currently does nothing, as Poetry doesn't support building non-source formats yet.
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
