[tool.poetry]
name = "detectron2-neo"
version = "0.7.0"
description = "Modernised fork of Detectron2"
homepage = "https://github.com/wilsonzlin/detectron2"
authors = ["FAIR", "Wilson Lin <code@wilsonl.in>"]
license = "Apache-2.0"
build = "build.py"
packages = [
  {include = "detectron2", from = "src"}
]

[tool.poetry.dependencies]
cloudpickle = "^2.2.1"
fvcore = ">=0.1.5,<0.1.6"
iopath = ">=0.1.7,<0.1.10"
matplotlib = "^3.7.1"
omegaconf = ">=2.1"
pillow = ">=7.1"
pycocotools = ">=2.0.2"
python = ">=3.8,<=3.11" # https://pytorch.org/blog/deprecation-cuda-python-support/
tabulate = "^0.9.0"
tensorboard = "^2.12.1"
termcolor = ">=1.1"
torch = "==2.0.0" # We build native extensions against this version, that would probably not work with a different PyTorch and/or embedded CUDA.
tqdm = ">4.29.0"

# TODO This currently does nothing, as Poetry doesn't support building non-source formats yet.
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
